--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -9,9 +9,13 @@
     @include span(12 of 12);
   }
 
-  @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
+  // @include breakpoint($large) {
+  //   @include span(10 of 12 last);
+  //   @include prefix(0.5 of 12);
+   @include breakpoint($large) {
+    @include span(9 of 12 last);
+    @include prefix(1 of 12);
+    @include suffix(1 of 12);
   }
 
   a {
