--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,4 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
