--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,9 +28,9 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : "Montserrat", $sans-serif; // sans-serif or serif
-$header-font-family         : "Montserrat", $sans-serif; // sans-serif or serif
-$caption-font-family        : "Montserrat", $sans-serif; // sans-serif or serif
+$global-font-family         : "Merriweather", "Montserrat", $sans-serif; // sans-serif or serif
+$header-font-family         : "Merriweather", "Montserrat", $sans-serif; // sans-serif or serif
+$caption-font-family        : "Merriweather", "Montserrat", $sans-serif; // sans-serif or serif
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
