--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,7 @@ $indent-var                 : 1.3em;
 
 /* system typefaces */
 $serif                      : "Merriweather", Times, serif;
-$sans-serif                 : "San Francisco", -apple-system, ".SFNSText-Regular", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+$sans-serif                 : "Montserrat" -apple-system, ".SFNSText-Regular", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "San Francisco", Arial, sans-serif;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
 
 /* sans serif typefaces */
