--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size              : 16;
+$doc-font-size              : 15; // default 16
 
 /* paragraph indention */
 $paragraph-indent           : false; // true, false (default)
@@ -14,7 +14,7 @@ $indent-var                 : 1.3em;
 
 /* system typefaces */
 $serif                      : "Merriweather", Times, serif;
-$sans-serif                 : "Montserrat" -apple-system, ".SFNSText-Regular", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "San Francisco", Arial, sans-serif;
+$sans-serif                 : "Merriweather", "Montserrat" -apple-system, ".SFNSText-Regular", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "San Francisco", Arial, sans-serif; // for easy unified use of "Merriweather", which is serif
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
 
 /* sans serif typefaces */
@@ -28,9 +28,9 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : "Montserrat", $sans-serif; // sans-serif or serif
-$header-font-family         : "Montserrat", $sans-serif; // sans-serif or serif
-$caption-font-family        : "Montserrat", $sans-serif; // sans-serif or serif
+$global-font-family         : "Merriweather", "Montserrat", $sans-serif; // sans-serif or serif
+$header-font-family         : "Merriweather", "Montserrat", $sans-serif; // sans-serif or serif
+$caption-font-family        : "Merriweather", "Montserrat", $sans-serif; // sans-serif or serif
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
