--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -1,6 +1,6 @@
 {% include base_path %}
 
-<div class="pub-item">
+<div class="pub-item", style="font-size: 0.9em;">
   <p>
     <strong>{{ post.authors }}</strong> - 
     <em>{{ post.title }}</em>
