--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -1,16 +1,19 @@
 {% include base_path %}
 
-<div class="pub-item", style="font-size: 0.9em;">
+<div class="pub-item" style="font-size: 0.9em; line-height: 1.4em;">
   <p>
-    <span>{{ post.authors }}<span>
+    <span>{{ post.authors }}</span>
     {% if post.note %}
-    <em>{{ post.note }}</em> - 
-    <strong>{{ post.title }}<strong>
+      - <span><em>{{ post.note }}</em></span>
+    {% endif %}
+  </p>
+  <p style="margin: 0.2em 0;">
+    <span><strong>{{ post.title }}</strong></span>
     {% if post.venue %}
       - <span>{{ post.venue }}</span>
     {% endif %}
   </p>
-  <p>
+  <p style="margin: 0;">
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">Paper</a>
     {% endif %}
