--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -1,19 +1,17 @@
 {% include base_path %}
 
 <div class="pub-item" style="font-size: 0.9em; line-height: 1.4em;">
-  <p>
+  <p style="margin: 0;">
     <span>{{ post.authors }}</span>
     {% if post.note %}
       - <span><em>{{ post.note }}</em></span>
     {% endif %}
-  </p>
-  <p style="margin: 0.2em 0;">
-    <span><strong>{{ post.title }}</strong></span>
+    - <span><strong>{{ post.title }}</strong></span>
     {% if post.venue %}
       - <span>{{ post.venue }}</span>
     {% endif %}
   </p>
-  <p style="margin: 0;">
+  <p style="margin: -0.3em 0 0 0;">
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">Paper</a>
     {% endif %}
