--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,8 +13,8 @@ $paragraph-indent           : false; // true, false (default)
 $indent-var                 : 1.3em;
 
 /* system typefaces */
-$serif                      : "EB Garamond", Times, serif;
-$sans-serif                 : "Montserrat" -apple-system, ".SFNSText-Regular", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "San Francisco", Arial, sans-serif; // for easy unified use of "Merriweather", which is serif
+$serif                      : "Montserrat", "EB Garamond", Times, serif;
+$sans-serif                 : "Montserrat" -apple-system, ".SFNSText-Regular", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "San Francisco", Arial, sans-serif;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
 
 /* sans serif typefaces */
@@ -28,9 +28,9 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : "EB Garamond", $serif; // sans-serif or serif
-$header-font-family         : "EB Garamond", $serif; // sans-serif or serif
-$caption-font-family        : "EB Garamond", $serif; // sans-serif or serif
+$global-font-family         : "Montserrat", $serif; // sans-serif or serif
+$header-font-family         : "Montserrat", $serif; // sans-serif or serif
+$caption-font-family        : "Montserrat", $serif; // sans-serif or serif
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
