--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -56,10 +56,10 @@ $sidebar-link-max-width     : 250px;
    ========================================================================== */
 
 $gray                       : #7a8288;
-$dark-gray                  : mix(#000, $gray, 40%);
-$darker-gray                : mix(#000, $gray, 60%);
-$light-gray                 : mix(#fff, $gray, 50%);
-$lighter-gray               : mix(#fff, $gray, 90%);
+$dark-gray                  : #4a4f53; // mix(#000, $gray, 40%);
+$darker-gray                : #656c71; // mix(#000, $gray, 60%);
+$light-gray                 : #bdbfc1; // mix(#fff, $gray, 50%);
+$lighter-gray               : #e9ebec; // mix(#fff, $gray, 90%);
 
 $body-color                 : #fff;
 $background-color           : #fff;
