--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -22,12 +22,12 @@
   {% if post.labels %}
   <p style="margin: 0.2em 0;">
     {% for label in post.labels %}
-      <span style="display: inline-block; background-color: #bdbfc1; color: #4a4f53; padding: 0.2em 0.4em; margin-right: 0.3em; border-radius: 3px; font-size: 0.8em;">{{ label }}</span>
+      <span style="display: inline-block; background-color: #e9ebec; color: #4a4f53; padding: 0.2em 0.4em; margin-right: 0.3em; border-radius: 3px; font-size: 0.7em;">{{ label }}</span>
     {% endfor %}
   </p>
 {% endif %}
   
-  <p style="margin: -2em 0 0 0;">
+  <p style="margin: -0.5em 0 0 0;">
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">Paper</a>
     {% endif %}
