--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -27,7 +27,7 @@
   </p>
 {% endif %}
   
-  <p>
+  <p style="margin: -0.2em 0;">
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">Paper</a>
     {% endif %}
