--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -27,7 +27,7 @@
   </p>
 {% endif %}
   
-  <p style="margin: -0.1em 0;">
+  <p style="margin: 0;">
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">Paper</a>
     {% endif %}
