--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -2,7 +2,7 @@
 
 <div class="pub-item"> 
 <!--   style="font-size: 0.9em; line-height: 1.4em;" -->
-  <p style="margin: 0;">
+  <p style="margin: 0; font-size: 0.8em;">
     <span>{{ post.authors }}</span>
     {% if post.note %}
       - <span><em>{{ post.note }}</em></span>
@@ -22,12 +22,12 @@
   {% if post.labels %}
   <p style="margin: 0.2em 0;">
     {% for label in post.labels %}
-      <span style="display: inline-block; background-color: #e9ebec; color: #4a4f53; padding: 0.2em 0.4em; margin-right: 0.3em; border-radius: 3px; font-size: 0.7em;">{{ label }}</span>
+      <span style="display: inline-block; background-color: #e9ebec; color: #4a4f53; padding: 0.2em 0.4em; margin-right: 0.3em; border-radius: 3px; font-size: 0.6em;">{{ label }}</span>
     {% endfor %}
   </p>
 {% endif %}
   
-  <p style="margin: 0;">
+  <p style="margin: 0; font-size: 0.8em;">
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">Paper</a>
     {% endif %}
