--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -37,6 +37,9 @@
     {% if post.codeurl %}
       | <a href="{{ post.codeurl }}">Code</a>
     {% endif %}
+    {% if post.conferenceurl %}
+      | <a href="{{ post.conferenceurl }}">Conference Page</a>
+    {% endif %}
     <!-- Add other links similarly -->
   </p>
 
