--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -15,7 +15,7 @@
       {% endif %}
     </strong></span>
     {% if post.venue %}
-      - <span>{{ post.venue }}</span>
+      - <span><em>{{ post.venue }}</em></span>
     {% endif %}
   </p>
 
